fixed product image stretching issue

--- a/components/cart/_cart.scss
+++ b/components/cart/_cart.scss
@@ -98,7 +98,7 @@
                 display: flex;
 
                 .lineItemQuantity {
-                  width: 5rem;
+                  width: 3rem; // 2 digits
                   text-align: center;
 
                   input {
