--- a/components/product/_product.scss
+++ b/components/product/_product.scss
@@ -73,6 +73,7 @@
               height: calc(100% - 6rem);
               margin: 0 auto;
               box-sizing: border-box;
+              object-fit: contain;
               border-radius: var(--border-radius);
               display: block;
             }
